--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
   <body>
     <script src="/js/app.js"></script>
+    <script src="http://localhost:8080/webpack-dev-server.js"></script>
   </body>
 </html>
