--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <div id="main"></div>
     <script src="/js/app.js"></script>
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
   </body>
