--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,16 +1,14 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
-
     <title>CDC Disease Indicator Tool</title>
     <meta name="description" content="CDC Disease Indicator Tool">
   </head>
 
   <body>
     <div id="main"></div>
-    <script src="/js/app.js"></script>
-    <script src="http://localhost:8080/webpack-dev-server.js"></script>
   </body>
+
 </html>
