Add a choropleth map component using react-leaflet

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>CDC Disease Indicator Tool</title>
     <meta name="description" content="CDC Disease Indicator Tool">
+    <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
   </head>
 
   <body>
