Add Socrata custom dev styles; add spinner while data initially loads

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -5,11 +5,22 @@
     <meta charset="utf-8">
     <title>CDC Disease Indicator Tool</title>
     <meta name="description" content="CDC Disease Indicator Tool">
+    <link rel="stylesheet" href="dev/base.css">
+    <link rel="stylesheet" href="dev/custom.css">
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
+    <script src="https://use.fontawesome.com/b2cfa6b859.js"></script>
   </head>
 
-  <body>
-    <div id="main"></div>
+  <body class="controller_custom_content action_custom_content_page locale_en cdc-home">
+    <div class="siteOuterWrapper">
+      <div class="siteInnerWrapper">
+        <div class="siteContentWrapper">
+          <div class="socrata-component component-Container notRendered socrata-container" id="cdc-home">
+            <div class="socrata-component component-Container serverRendered notRendered socrata-container" id="main"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 
 </html>
