--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,6 +6,7 @@
     <title>CDC Disease Indicator Tool</title>
     <meta name="description" content="CDC Disease Indicator Tool">
     <!-- some CSS from Socrata platform is loaded to mimic how the tool behaves on ChronicData site -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <link rel="stylesheet" href="dev/base.css">
     <link rel="stylesheet" href="dev/custom.css">
     <!-- vendors css -->
