--- a/src/index.template.html
+++ b/src/index.template.html
@@ -7,8 +7,8 @@
     <meta name="description" content="CDC Disease Indicator Tool">
     <!-- some CSS from Socrata platform is loaded to mimic how the tool behaves on ChronicData site -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="/dev/base.css">
-    <link rel="stylesheet" href="/dev/custom.css">
+    <link rel="stylesheet" href="dev/base.css">
+    <link rel="stylesheet" href="dev/custom.css">
     <!-- vendors css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
