Adding meta tag to prevent IE from using compatibility mode

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CDC Disease Indicator Tool</title>
     <meta name="description" content="CDC Disease Indicator Tool">
     <!-- some CSS from Socrata platform is loaded to mimic how the tool behaves on ChronicData site -->
