--- a/src/index.template.html
+++ b/src/index.template.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CDC Disease Indicator Tool</title>
     <meta name="description" content="CDC Disease Indicator Tool">
     <!-- some CSS from Socrata platform is loaded to mimic how the tool behaves on ChronicData site -->
